--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-google-app-auth": "~8.3.0",
+    "expo-speech": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "8.10.0",
     "react": "17.0.1",
@@ -28,13 +29,12 @@
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4",
-    "expo-speech": "~10.1.0"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
